--- a/README
+++ b/README
@@ -1,3 +1,5 @@
-Need to use this
-try /share/apps/python2.7/bin/python and let me know if this works
-When debugging, use qrsh for interactive session
+
+Smolfin is a tool for estimating diffusion-limited reactions between a substrate and enzyme, based on the Smoluchowski electrodiffusion equation. The software utilizes atomistic resolution structural data for the enzyme, the electrostatic potential from Poisson-Boltzmann solvers like APBS (http://www.poissonboltzmann.org/apbs), and is based on the FEnICs finite element solver (http://fenicsproject.org/). Smolfin was recently used to model Ca2+ association with the myofilament Ca2+ sensor Troponin C and the Sarcoplasmic Reticulum Ca2+ ATPase Ca2+ transporter (to appear here: http://iopscience.iop.org/1749-4699/page/Forthcoming%20articles) 
+
+Tutorial details are forthcoming.
+
