Added non-functional poisson-boltzmann solver

--- a/README
+++ b/README
@@ -11,6 +11,8 @@ Sarcoplasmic Reticulum Ca2+ ATPase Ca2+ transporter [1]
 Tutorial details are located in ./docs/
 
 
-P. M. Kekenes-Huskey, A. Gillette, and J. Hake, Finite-element estimation of protein-ligand association rates with post-encounter effects: applications to calcium binding in troponin C and SERCA,Computational Science & Discovery, 2012.
+P. M. Kekenes-Huskey, A. Gillette, and J. Hake, Finite-element estimation of 
+protein-ligand association rates with post-encounter effects: applications to 
+calcium binding in troponin C and SERCA,Computational Science & Discovery, 2012.
 http://iopscience.iop.org/1749-4699/5/1/014015?fromSearchPage=true
 
