Major overhaul of code to get it working with dolfin 1.5

--- a/smolfin.ipynb
+++ b/smolfin.ipynb
@@ -1,13 +1,22 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:98ea2492376b6750f5f2031bfc23e403fdb5c5b2bcbd2b6aeb71e6a6ee3a42a1"
+  "signature": "sha256:7014c31e34a0c9f7221329dcadf4b17ca5c4b491a8e471b1c68c386d002eaca2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Smolfin notebook for demonstrating basic operation of Smoluchowski solver\n",
+      "\n",
+      "Peter Kekenes-Huskey"
+     ]
+    },
     {
      "cell_type": "code",
      "collapsed": false,
@@ -19,17 +28,33 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "The autoreload extension is already loaded. To reload it, use:\n",
-        "  %reload_ext autoreload\n"
-       ]
-      }
+     "outputs": [],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "python ~/sources/smolfin/smoltodolfin.py  -mesh tnc_isolated_mesh.xml.gz -p 3sl3_0.2A.dx -p 3sl3_0.5A.dx"
      ],
-     "prompt_number": 25
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Initializations"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Assumed here that you have a dolfin-compatible mesh. \n",
+      "Latest instructions for mesh generation are posted with the cytosolic homogenization paper"
+     ]
     },
     {
      "cell_type": "code",
@@ -40,23 +65,63 @@
       "\n",
       "class empty:pass\n",
       "\n",
+      "# define where mesh file is located and well as the potential\n",
+      "base = \"/net/share/pmke226/data/test/\"\n",
+      "root=base + \"tnc_isolated\"\n",
+      "problem = empty()\n",
+      "problem.root = root\n",
+      "problem.fileMesh = root+\"_mesh.xml.gz\""
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 19
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Generate 'subdomains' that mark important regions of system \n",
+      "You will need to specify in Cartesian coordinates where your active site is located, how large (radius) it is, and where the outer boundary of your mesh is located"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "import testboundaries as tb\n",
       "import initMesh as iM\n",
-      "from dolfin import Mesh\n",
       "\n",
-      "root = \"/net/share/pmke226/data/smolfin_troponinc/tnc_isolated\"\n",
-      "problem = empty()\n",
-      "problem.fileMesh = root+\"_mesh.xml.gz\"\n",
+      "\n",
       "problem.fileSubdomains= root+\"_subdomains.xml.gz\"\n",
-      "problem.filePotential= None # root+\"_values.xml.gz\"\n",
-      "iM.SetBoundaries(problem)\n",
-      "tb.TestBoundaries(problem=problem)\n",
       "\n",
-      "#results= smol.Run(problem,pvdFileName=root+\".pvd\")"
+      "createBoundaries = True\n",
+      "if createBoundaries:\n",
+      "  # marks boundaries for active site, etc    \n",
+      "  iM.SetBoundaries(problem,\n",
+      "    activeSiteLoc = np.array([24, 8,-5]),\n",
+      "    activeSiteR = 5,  # radius [A] of active site\n",
+      "    outerR=200 # radius [A] of outer domain \n",
+      "    )\n",
+      "  tb.TestBoundaries(problem=problem)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "DEBUG:FFC:Reusing form from cache.\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "DEBUG:FFC:Reusing form from cache.\n"
+       ]
+      },
       {
        "output_type": "stream",
        "stream": "stdout",
@@ -81,105 +146,213 @@
        ]
       }
      ],
-     "prompt_number": 31
+     "prompt_number": 20
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Prepare electrostatic meshes\n",
+      "\n",
+      "Can be done from command line via\n",
+      "<code>\n",
+      "python ~/sources/smolfin/interpolateAPBS.py  -mesh tnc_isolated_mesh.xml.gz -p 3sl3_0.2A.dx -p 3sl3_0.5A.dx\n",
+      "</code>"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from dolfin import *\n",
-      "mesh = problem.mesh\n",
-      "V = FunctionSpace(mesh,\"CG\",1)\n",
-      "u = TrialFunction(V)\n",
-      "v = TestFunction(V)"
+      "import interpolateAPBS\n",
+      "\n",
+      "createPMF=True\n",
+      "if createPMF:\n",
+      "  apbsfileNames=[\n",
+      "    base+\"3sl3_0.5A.dx\",\n",
+      "    base+\"3sl3_0.2A.dx\",\n",
+      "  ]\n",
+      "  interpolateAPBS.convertAllAPBS(problem,apbsfileNames,\n",
+      "                               writePotentialOnly=True,clipValues=True)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "NOTE: Need to save mesh, then load 'interpolated', otherwise potential will disagree\n",
+        "WARNING: Be sure to read lowest resolution mesh first, second lowest next, etc"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Reading APBS file /net/share/pmke226/data/test/3sl3_0.5A.dx\n",
+        "Interpolated potential values [kT/e]: min (-2.095758e+01) max (1.922792e+01) "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Reading APBS file /net/share/pmke226/data/test/3sl3_0.2A.dx\n",
+        "Interpolated potential values [kT/e]: min (-2.084665e+01) max (1.627368e+01) "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "DEBUG:FFC:Reusing form from cache.\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Encountered 3 values with very small potential valus. Clipping to -1.188174\n",
+        "Encountered 3 values with very high potential values. Clipping to 1.188174\n",
+        "Final: Interpolated potential values [kT/e]: min (-1.188174e+00) max (1.188174e+00) \n"
+       ]
+      }
+     ],
+     "prompt_number": 22
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Decide here whether to include electrostatic PMF in Smol solution"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "\n",
+      "doElectro=True\n",
+      "if doElectro:\n",
+      "    problem.filePotential= root+\"_values.xml.gz\"\n",
+      "else:\n",
+      "    problem.filePotential= None      \n",
+      "    "
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 32
+     "prompt_number": 23
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Execution"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "import smol\n",
-      "parms = smol.parms\n",
-      "subdomains =problem.subdomains\n",
-      "bc0 = DirichletBC(V,Constant(parms.active_site_absorb),subdomains,parms.active_site_marker)\n",
-      "bc1 = DirichletBC(V,Constant(parms.bulk_conc),subdomains,parms.outer_boundary_marker)\n",
-      "problem.bcs = [bc0,bc1]"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 33
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "form = inner(grad(u),grad(v))*dx\n",
-      "F = lhs(form)\n",
-      "L = rhs(form)\n",
-      "\n",
-      "\n",
-      "x=Function(V)\n",
-      "lvproblem = LinearVariationalProblem(F,L, x, bcs=problem.bcs)\n",
-      "solver = LinearVariationalSolver(lvproblem)\n",
-      "solver.parameters[\"linear_solver\"] = \"gmres\"\n",
-      "solver.parameters[\"preconditioner\"] = \"ilu\"\n",
-      "solver.solve()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 34
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "File(\"soln.pvd\")<<x"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 39
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "#results= smol.Run(problem,pvdFileName=root+\".pvd\")\n",
-      "Jp = grad(x) \n",
-      "#boundary_flux_terms = assemble(dot(Jp, tetrahedron.n)*ds(subdomainMarker,domain=mesh))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 36
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# Integration over surface \n",
-      "\n",
-      "ds = ds[problem.subdomains]\n",
-      "print assemble(Constant(1.0)*ds(parms.active_site_marker, domain=problem.mesh))\n",
-      "print assemble(Constant(1.0)*ds(parms.outer_boundary_marker, domain=problem.mesh))\n",
-      "print assemble(Constant(1.0)*ds(parms.molecular_boundary_marker, domain=problem.mesh))"
+      "results= smol.Run(problem,pvdFileName=root+\".pvd\")"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "DEBUG:FFC:Reusing form from cache.\n"
+       ]
+      },
+      {
+       "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "78.6125664863\n",
-        "3424220.40163\n",
-        "4692.11446894"
+        "/net/share/pmke226/data/test/tnc_isolated_values.xml.gz\n",
+        "Potential range: -2.376349 - 2.376349 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "DEBUG:FFC:Reusing form from cache.\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "DEBUG:FFC:Reusing form from cache.\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "DEBUG:FFC:Reusing form from cache.\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "DEBUG:FFC:Reusing form from cache.\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Unprojected Solution range: 0.000000 - 1.000000 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Projected solution range: 0.000000 - 52.102351 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "DEBUG:FFC:Reusing form from cache.\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Printing solution to /net/share/pmke226/data/test/tnc_isolated.pvd\n",
+        "Subdomain has area of 78.612566 [A^2]"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "DEBUG:FFC:Reusing form from cache.\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "kon: 1.107901e+09 [1/Ms] 6.647405e+10 [1/M min]"
        ]
       },
       {
@@ -190,139 +363,7 @@
        ]
       }
      ],
-     "prompt_number": 54
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "n = FacetNormal(mesh)\n",
-      "assemble(dot(Jp,n)*ds(parms.active_site_marker,domain=problem.mesh))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 67,
-       "text": [
-        "-23.187568127650987"
-       ]
-      }
-     ],
-     "prompt_number": 67
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "results = empty()\n",
-      "results.up = x\n",
-      "pmf = Function(V)\n",
-      "pmf.vector()[:]=1.\n",
-      "problem.pmf = pmf"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 65
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "assemble(dot(Jp,n)*ds(parms.outer_boundary_marker))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 56,
-       "text": [
-        "49.279595303117496"
-       ]
-      }
-     ],
-     "prompt_number": 56
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "assemble(dot(Jp,n)*ds(parms.molecular_boundary_marker))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 57,
-       "text": [
-        "-1.9078849340716804"
-       ]
-      }
-     ],
-     "prompt_number": 57
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "assemble(x*dx)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 58,
-       "text": [
-        "591635551.1448317"
-       ]
-      }
-     ],
-     "prompt_number": 58
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "smol.ComputeKon(problem,results)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Running on kafka using dolfin version 1.5.0\n",
-        "Subdomain has area of 78.612566 [A^2]\n",
-        "kon: 1.089183e+09 [1/Ms] 6.535097e+10 [1/M min]"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n"
-       ]
-      },
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 70,
-       "text": [
-        "1089182767.1837144"
-       ]
-      }
-     ],
-     "prompt_number": 70
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
