Changes to be compatible with cytoplasm

--- a/smolfin.ipynb
+++ b/smolfin.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7014c31e34a0c9f7221329dcadf4b17ca5c4b491a8e471b1c68c386d002eaca2"
+  "signature": "sha256:615601bbb674895b5220ba18fbfa2a8f23e3ce489cc605b38c5c6109519655d9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -28,18 +28,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "python ~/sources/smolfin/smoltodolfin.py  -mesh tnc_isolated_mesh.xml.gz -p 3sl3_0.2A.dx -p 3sl3_0.5A.dx"
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "The autoreload extension is already loaded. To reload it, use:\n",
+        "  %reload_ext autoreload\n"
+       ]
+      }
      ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -75,7 +74,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 19
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -126,7 +125,15 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Active site: (552/59860)\n",
+        "Running on kafka using dolfin version 1.5.0\n",
+        "Active site: (552/59860)"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
         "Bulk: (258/59860)"
        ]
       },
@@ -146,7 +153,7 @@
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -222,7 +229,7 @@
        ]
       }
      ],
-     "prompt_number": 22
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -246,7 +253,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 23
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -352,18 +359,11 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "kon: 1.107901e+09 [1/Ms] 6.647405e+10 [1/M min]"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n"
+        "kon: 1.107901e+09 [1/Ms] 6.647405e+10 [1/M min]\n"
        ]
       }
      ],
-     "prompt_number": 25
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -371,7 +371,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 8
     }
    ],
    "metadata": {}
