--- a/smolfin.ipynb
+++ b/smolfin.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:615601bbb674895b5220ba18fbfa2a8f23e3ce489cc605b38c5c6109519655d9"
+  "signature": "sha256:a04c1228e0036ad589b9e50be4084aedc9a87714faec0d503473f660cdc82a0c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -13,6 +13,8 @@
      "metadata": {},
      "source": [
       "## Smolfin notebook for demonstrating basic operation of Smoluchowski solver\n",
+      "\n",
+      "Actual data for validation is here (on UCSD):  /net/data/huskeypm/GiKe11a/GiKe11a/tnc_isolated \n",
       "\n",
       "Peter Kekenes-Huskey"
      ]
